# negdis-experiments

./: .gitattributes  .gitignore  LICENSE  README.md  asprin_example.ipynb  run_asprin_cerv_experiments.ipynb  run_asprin_dreyers_experiments.ipynb  run_cerv_experiments.ipynb  run_reallife_experiments.ipynb  run_synt_experiments.ipynb  setup.cfg
binder/: environment.win.yml  environment.yml
data/cerv/: convert_kb_to_xes.pl  templates.txt
data/cerv/fold01/: cerv.01.kb  cerv.01.neg.xes  cerv.01.pos.xes  cerv.01.val.kb  cerv.01.valneg.xes  cerv.01.valpos.xes
data/cerv/fold02/: cerv.02.kb  cerv.02.neg.xes  cerv.02.pos.xes  cerv.02.val.kb  cerv.02.valneg.xes  cerv.02.valpos.xes
data/cerv/fold03/: cerv.03.kb  cerv.03.neg.xes  cerv.03.pos.xes  cerv.03.val.kb  cerv.03.valneg.xes  cerv.03.valpos.xes
data/cerv/fold04/: cerv.04.kb  cerv.04.neg.xes  cerv.04.pos.xes  cerv.04.val.kb  cerv.04.valneg.xes  cerv.04.valpos.xes
data/cerv/fold05/: cerv.05.kb  cerv.05.neg.xes  cerv.05.pos.xes  cerv.05.val.kb  cerv.05.valneg.xes  (+1 more)
data/dreyers/: Dreyers Foundation.neg.xes  Dreyers Foundation.pos.xes  Dreyers Foundation.xes  fetch_dreyers_dataset.py  templates_SlaatsBPM21.txt
data/synt/: declarative_traces_negatives1.xml  declarative_traces_negatives2.xml  declarative_traces_negatives3.xml  declarative_traces_positives.xml  declare_rules.txt
negdis/: __init__.py  __main__.py  aspdeclare.py  cli.py  tools.py
negdis/templates/: __init__.py  count_closure.py.lp  guess.lp  main_countclos.py.lp  main_iter.py.lp  main_plain.py.lp  solver_configurations.json  subsetclos_asprin.lp
(+14 files in other folders)
