[metadata]
name = negdis
version = attr:negdis.__version__

[options]
zip_safe = False
packages = find:
python_requires = >=3.7

[options.package_data]
negdis.bin = */negdis*
negdis.templates = *.lp, *.json

[options.entry_points]
console_scripts =
  negdis = negdis.cli:negdis_cli
  aspdeclare = negdis.cli:aspdeclare_cli
